<resources>
    <string name="app_name">RawNews</string>
    <string name="last_news">Last NEWS</string>
    <string name="categories">Categories</string>
    <string name="favorites">Favorites</string>
    <string name="username">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="logout">Log Out</string>
    <string name="forgotten_password">Forgot password?</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login_here">Login here</string>
    <string name="register_fail">Error during register</string>
    <string name="register_correct">Correct Registration</string>
    <string name="login_fail">Login Fail</string>
    <string name="verify_email_message">Please verify your email:</string>
    <string name="or">or</string>
    <string name="login_other_account">Login with other account</string>
    <string name="cant_access_for_info">Can´t access for account info. Retrying.</string>
    <string name="send">Send</string>
    <string name="enter_password">Enter password:</string>
    <string name="info_password_delete_account">**This password is just because you want to delete your account in a future**</string>

    <!-- NOMBRES DE LAS CATEGORIAS -->
    <string name="GENERAL">GENERAL</string>
    <string name="SCIENCE">SCIENCE</string>
    <string name="SPORTS">SPORTS</string>
    <string name="BUSINESS">BUSINESS</string>
    <string name="HEALTH">HEALTH</string>
    <string name="ENTERTAINMENT">ENTERTAINMENT</string>
    <string name="TECH">TECH</string>
    <string name="POLITICS">POLITICS</string>
    <string name="FOOD">FOOD</string>
    <string name="TRAVEL">TRAVEL</string>

    <!-- VALIDATE INPUT TEXTS -->
    <!-- EMAIL -->
    <string name="introduce_email">Introduce an email</string>
    <string name="not_valid_email">Not a valid email</string>

    <!-- PASSWORD -->
    <string name="introduce_password">Introduce a password</string>
    <string name="minium_lenght_password">Enter at least 8 characters</string>

    <!-- LIKES CONTADOR -->
    <string name="likes">Likes</string>
    <string name="one_like">Like</string>


    <!-- PERFIL -->
    <string name="profile">PROFILE</string>
    <string name="personal_information">Personal Information</string>
    <string name="email">Email:</string>
    <string name="delete_account">Delete Account</string>
    <string name="delete_account_info_text">Introduce the account deletion password:</string>
    <string name="confirm_deletion">Confirm Deletion</string>
    <string name="delete_account_hint">Account Delete Password</string>
    <string name="cancel">Cancel</string>
    <string name="error_deleting_account">An error occurred while the account was being deleted</string>
    <string name="account_deleted">Account deleted</string>
    <string name="incorrect_password">Incorrect Password</string>
</resources>