<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.VerifyEmailFragment"
    android:id="@+id/registerFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verify_email_message"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/email_to_verify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:layout_marginTop="12dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:text="@string/or"
            android:textSize="16sp"
            android:layout_marginTop="12dp"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_other_account"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/secondary"
            android:textStyle="bold"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:id="@+id/btn_login_other_account"
            />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>