<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.PerfilActivity"
    android:orientation="vertical">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorSecondary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="0dp">
            <ImageView
                android:layout_width="38dp"
                android:layout_height="38dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:src="@drawable/ic_back"
                app:tint="@color/white"
                android:id="@+id/btnBack"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="RAW NEWS"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:fontFamily="@font/letra_logo_font"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"

                />

            <ImageView
                android:id="@+id/btnLogOut"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_logout"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginRight="12dp"
                app:tint="@color/white"
                />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile"
                android:textColor="@color/white"
                android:gravity="center"
                android:textSize="32sp"
                android:textStyle="bold"
                android:layout_marginTop="24dp"/>
            <androidx.cardview.widget.CardView
                android:layout_width="180dp"
                android:layout_height="180dp"
                app:cardCornerRadius="160dp"
                app:cardBackgroundColor="@color/primary"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="12dp"
                >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_user"
                    app:tint="@color/white" />
            </androidx.cardview.widget.CardView>

            <!-- Info de perfil -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/email"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:textSize="24sp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:layout_marginLeft="18dp"
                        android:id="@+id/tvEmail"/>

                </LinearLayout>


            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_marginTop="32dp"
                android:layout_width="match_parent"
                android:layout_height="180dp">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delete_account"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:backgroundTint="@color/secondary"
                    android:id="@+id/btnDeleteAccount"
                    />
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/clFormularioBorrarCuenta"
                    android:visibility="gone">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilPasswordDeleteAccount"
                        android:layout_width="240dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:passwordToggleEnabled="true"
                        >

                        <EditText
                            android:id="@+id/etPasswordDeleteAccount"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:ems="10"
                            android:hint="@string/delete_account_hint"
                            android:inputType="textPassword"/>
                    </com.google.android.material.textfield.TextInputLayout>
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/confirm_deletion"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toLeftOf="@+id/btnCancel"
                        app:layout_constraintTop_toBottomOf="@+id/tilPasswordDeleteAccount"
                        android:backgroundTint="@color/secondary"
                        android:layout_marginTop="12dp"
                        android:id="@+id/btnConfirmDeleteAccount"
                        />
                    <Button
                        android:id="@+id/btnCancel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cancel"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tilPasswordDeleteAccount"
                        android:backgroundTint="@color/primary_Dark"
                        android:layout_marginTop="12dp"
                        app:layout_constraintLeft_toRightOf="@+id/btnConfirmDeleteAccount"
                        />


                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>



        </LinearLayout>

    </ScrollView>


</LinearLayout>